--- a/src/UI/Header/Header.module.scss
+++ b/src/UI/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -11,7 +13,7 @@
     font-weight: 700;
     font-size: 25px;
     line-height: 30px;
-    color: #4793FF;
+    color: $blue;
     margin: 0px 0px 0px 25px;
 }
 
