--- a/src/UI/PopupSetCity/PopupSetCity.module.scss
+++ b/src/UI/PopupSetCity/PopupSetCity.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .blur {
     position: absolute;
     width: 100%;
@@ -9,13 +11,13 @@
 .popup {
     width: 500px;
     height: 200px;
-    border-radius: 10px;
+    border-radius: $border-radius;
     background-color: #fff;
     z-index: 201;
     position: absolute;
     top: calc(50% - 100px);
     left: calc(50% - 250px);
-    box-shadow: 1px 4px 10px -1px rgba(71, 147, 255, 0.2);
+    box-shadow: $box-shadow;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,13 +33,13 @@
 
 .button {
     display: flex;
-    background-color: #4793FF;
+    background-color: $blue;
     color: #fff;
     width: 120px;
     height: 40px;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: $border-radius;
 }
 
 .input {
@@ -46,6 +48,6 @@
     box-shadow: 2px 1px 8px 4px rgba(34, 60, 80, 0.2);
     text-align: center;
     height: 40px;
-    border-radius: 10px;
+    border-radius: $border-radius;
     font-size: 24px;
 }
