--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -1,19 +1,21 @@
+@import '../../../../styles/variables.scss';
+
 .this_day_info {
-    width: 750px;
-    height: 300px;
-    box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
-    border-radius: 20px;
+    width: 600px;
+    box-shadow: $box-shadow;
+    border-radius: $border-radius;
     display: flex;
     flex-direction: column;
     padding: 42px 30px;
     justify-content: space-between;
+    background-color: #fff;
 }
 
 .icon {
     width: 38px;
     height: 38px;
     border-radius: 100%;
-    box-shadow: 1px 4px 10px -1px rgba(71, 147, 255, 0.2);
+    box-shadow: $box-shadow;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,5 +32,10 @@
     width: 100px;
     font-size: 14px;
     margin: 0px 20px 0px 0px;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
 }
 
