--- a/src/UI/PopupSetCity/PopupSetCity.module.scss
+++ b/src/UI/PopupSetCity/PopupSetCity.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     z-index: 200;
-    background: rgba($color: #e9e3e3, $alpha: 0.5)
+    background-color: #f3f0f0;
 }
 
 .popup {
@@ -51,3 +51,5 @@
     border-radius: $border-radius;
     font-size: 24px;
 }
+
+.none{display: none;}
