--- a/src/pages/Home/components/AddTrackedCity/AddTrackedCity.module.scss
+++ b/src/pages/Home/components/AddTrackedCity/AddTrackedCity.module.scss
@@ -1,11 +1,17 @@
 .wrapper {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .title {
     font-size: 18px;
     color: #939CB0;
-    margin: 0px 0px 10px 0px;
+    margin: 0px 10px 5px 0px;
+}
+
+.add_button {
+    display: flex;
+    align-items: center;
+
 }
